--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -24,12 +24,15 @@
     }
   },
   "rules": {
-    "prettier/prettier": "error",
-    "react/prop-types": "warn",
+    "react/prop-types": "off",
+    "import/prefer-default-export": "off",
+    "no-console": "off",
+    "max-len": "off",
     "camelcase": "warn",
-    "import/prefer-default-export": "warn",
-    "import/no-extraneous-dependencies": "warn",
-    "prefer-object-spread": "warn"
+    "no-plusplus": "off",
+    "require-jsdoc": "off",
+    "no-invalid-this": "off",
+    "babel/no-invalid-this": "off"
   },
   "settings": {
     "react": {
