--- a/appsscript.json
+++ b/appsscript.json
@@ -1,10 +1,12 @@
 {
   "timeZone": "America/New_York",
-  "dependencies": {},
+  "dependencies": {
+  },
+  "webapp": {
+    "access": "ANYONE_ANONYMOUS",
+    "executeAs": "USER_DEPLOYING"
+  },
   "exceptionLogging": "STACKDRIVER",
-  "oauthScopes": [
-    "https://www.googleapis.com/auth/script.container.ui",
-    "https://www.googleapis.com/auth/spreadsheets"
-  ],
+  "oauthScopes": ["https://www.googleapis.com/auth/script.container.ui", "https://www.googleapis.com/auth/spreadsheets"],
   "runtimeVersion": "V8"
 }
