--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
+    "react-file-previewer": "^0.6.3",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "yup": "^0.32.8"
