--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "clsx": "^1.1.1",
     "formik": "^2.2.6",
     "gas-client": "^0.1.0",
     "prop-types": "^15.7.2",
